--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,18 +8,18 @@
   "background_color": "#FFFFFF",
   "icons": [
     {
-      "src": "MyPic.png",
+      "src": "MyPic.JPG",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "MyPic.png",
-      "type": "image/png",
+      "src": "MyPic.JPG",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "MyPic.png",
-      "type": "image/png",
+      "src": "MyPic.JPG",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ]
